--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         </div>
     </div>
 
+    <div class="credit">
+        <p><a href="https://www.instagram.com/chrstnsgn_" target="_blank">
+            <img src="instagram-icon.png" alt="Instagram" class="instagram-icon"> chrstnsgn_
+        </a></p>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
