--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>Generate AI Image</h1>
-        <p>Only 2 requests per minute</p>
+        <p>Only 2 requests per minute (Paunahan nalang kayo)</p>
         <input type="text" id="prompt" placeholder="Enter a prompt">
         <button onclick="generateImage()">Generate</button>
         <button onclick="resetPage()">Reset</button>
